pop_up.css
body {
    /* height: 350px; */
    width: 264px;
    margin: 0;
}

body>div {
  /* padding: 0 10px; */
  border-top: 1px solid #e6e6e6;
}

/* Barra Superior*/
.title{
    font-weight: bold;
    margin: 16px;
    /* padding: 8px 0 5px; */
    display: flex;
    align-items: center;
}
.title-icons{
  position: relative;
  margin-left: auto;
}
.logo{
    display: inline-block;
    width: 154px;
    height: 26px;
    background-size: contain !important;
    /*background: url(chrome-extension://bpconcjcammlapcogcnnelfmaeghhagj/images/logo/nimbus_capture_full.svg) no-repeat;*/
    background: url(./logo/logo_alpha.png) no-repeat;
}
.icon-config{
    background: url(./icon-config.svg)  center no-repeat;
}
.icon-help{
    background: url(./icon-help.svg) center no-repeat;
}

/* Menu e menuPrincipal*/
.menu {
  display: flex;
  align-items: center;
}
.menu-principal{
  margin: 0 16px 12px;
  /* padding: 0 5px 0 5px; */
}
.menu-func{
  position: relative;
  padding: 8px 16px 16px;
  /* border: 0.1rem solid rgba(0, 0, 0, 0.384); */
  /* border-radius: 6px; */
  background: #f7f7f7;
}
footer{
  border-top: 1px solid #e6e6e6;
  /* background: rgb(250,250,250); */
  --animation-time: 4s;
}
.sub-menu{
  display: flex;
  padding: 5px 0 5px 0;
  width: 100%;
  align-items: center;
}
.menu p{
  margin: 0px;
}
.menu h3{
  margin: 0px;
}

.switch input.limite_edit {
  position: absolute;
  opacity: 1;
  width: 16px;
  height: 12px;
  margin-left: auto;
  font-size: 0.75rem;
  right: 3px;
}

/* Desativa as setas do number */
input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
  -webkit-appearance: none; 
  margin: 0; 
}

span.control {
  position: absolute;
  font-size: 15px;
  cursor: pointer;
}

span, p, h3 {
  cursor: default;
}

footer {
  display: flex;
  flex-direction: column;
  position: relative;
  /* justify-content: space-between;
  align-items: center; */
  /* margin-top: 5px; */
  height: 49px;
}

.footer span, .div_version span {
  position: relative;
  color: rgba(50,50,50,0.75);
  transition: all 0.4s ease-out;
}

.panels{
  overflow: hidden;
  position: relative;
  height: 41px;
}
.panels > [aria-hidden=false] {
  opacity: 1;
  transform: translateY(0);
}

button {
  border: 0;
  color: #0797E1;
  background: none;
  cursor: pointer;
}

button:focus {
  outline: #acacac dotted 1px;
  animation: 0.3s ease-out 0s 1 outline-in;
}

.tabs {
  display: flex;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
}

.tabs > li {
  flex: 1;
  padding: 0 1px;
}

.tabs button::before, .tabs button::after{
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  height: 50%;
  background-color: #0797E1;
  opacity: 0.3;
  content: "";
  transition: all 0.3s ease-in;
}

.tabs button::after 
{
  right: 100%;
  height: 50%;
  opacity: 0.5;
  --animation-name: progress-bar;
}

.tabs.animated button[aria-selected=true]::after {
  animation: var(--animation-name) var(--animation-time) linear 0s;
}

.tabs button[aria-selected=true]::before, .tabs button:hover::before, .tabs button:focus::before, .tabs button[aria-selected=true]::after {
  height: 100%;
}

.tabs button {
  position: relative;
  height: 8px;
  width: 100%;
  padding: 0;
}

ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

.panels > li {
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: absolute;
  height: 41px;
  padding: 0 16px;
  width: calc(100% - 32px);
  opacity: 0;
  transform: translateY(calc(-1 * 41px));
  transition: transform 0.3s ease;


}
.footer span:hover {
  color: rgba(50,50,50,1);
}

.button_footer {
  position: relative;
  cursor: pointer;
}

.button_footer a {
  text-decoration: none;
  font-size: 13px;
  color: #0797E1;
  /* color: #002229; */
  padding: 5px 10px;
  border: 1px solid transparent;
  border-radius: 6px;
  font-weight: 600;
  text-transform: uppercase;
  transition: all 0.4s ease-out;
}

.button_footer a:hover {
  border-color: rgba(0, 34, 41, 0.5);
}

.button_footer a:not(:hover) {
  filter: opacity(0.8);
}

.hide {
  visibility:hidden;
}

.disable_span {
  filter: opacity(0.5) grayscale(1) blur(0.5px) !important;
  cursor: default !important;
}

.limite_edit:not(:disabled), .control {
  color: rgba(0,0,0,0.85);
}

.limite_edit:focus-visible {
  outline: none;
}




/* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  width: 30px;
  height: 17px;
  margin-left: auto;
}
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}
.slider:before {
  position: absolute;
  content: "";
  height: 13px;
  width: 13px;
  left: 2px;
  bottom: 2px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}
input:checked + .slider {
  background-color: #2196F3;
}
input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}
input:checked + .slider:before {
  -webkit-transform: translateX(13px);
  -ms-transform: translateX(13px);
  transform: translateX(13px);
}
.slider.round {
  border-radius: 17px;
}
.slider.round:before {
  border-radius: 50%;
}
.slider.grande{
  transform: scale(1.4);
}
.disable {
  filter: opacity(0.5) grayscale(1) blur(0.5px);
}

.div_version{
  position: absolute;
  top: 0;
  right: 0;
  padding: 2px;
}
#version_info {
  padding: 3px;
}

/* Beta message */

h2.beta.is-beta {
  margin: 0px;
  position: absolute;
  right: 0px;
  top: calc(100%/2 - 22px/2);
  color: #320000;
}

h2.beta:not(.is-beta){
  display: none;
}

/* Dark mode  */

body:has(#Dark_on:checked):has(#SGE_on:checked) {
  background: #18191A;
  color: #E4E6EB;
}

body:has(#Dark_on:checked):has(#SGE_on:checked) span{
  color: #E4E6EB;
}

body:has(#Dark_on:checked):has(#SGE_on:checked) #sub-menu{
  background: #242526;
  color: #E4E6EB;
}

body:has(#Dark_on:checked):has(#SGE_on:checked) [type="image"]{
  filter: invert(1);
}

body:has(#Dark_on:checked):has(#SGE_on:checked) > div, body:has(#Dark_on:checked):has(#SGE_on:checked) > footer {
  border-top: 1px solid #424446
}

body:has(#Dark_on:checked):has(#SGE_on:checked) button::before, body:has(#Dark_on:checked):has(#SGE_on:checked) button::after{
  background-color: #65bbff;
}

body:has(#Dark_on:checked):has(#SGE_on:checked) .button_footer a{
  color: #65bbff;
}

body:has(#Dark_on:checked):has(#SGE_on:checked) .logo{
  background: url(./logo/logo_alpha_white.png) no-repeat;
}



/* Pedir HOST */
body .host {

  animation: refresh-scale 0.5s ease-in-out;
  position: absolute;
  background: #fff;

  height: 170px;

  left: 10px;
  right: 10px;
  top: calc(100%/2 - 170px/2);

  z-index: 999;

  border: 1px solid #e6e6e6;
  border-radius: 6px;
  box-shadow: 0 2px 4px 0 hsla(0, 0%, 84%, 0.5);

  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;

  font-size: 13px;
}

.host strong {
  font-weight: bold;
}

.host span {
  color: #585858;
}

.body {
  position: relative;
  background: #f7f7f7;
}

body:has(.host:not(.host-hidden)) #sub-menu {
  visibility: hidden;
}

.host.host-hidden{
  display: none;
}

.button_host a{
  border: none;
}

.button_host a:hover{
  border: none;
}

.button_host{
  margin: 0 20px;
  padding: 6px;
  border: 1px solid transparent;
  border-radius: 6px;
  border-color: #0497E1;
  background: #EDF9FF;
}

.host .button_host.oculto {
  display: none;
}

.host a.not-active {
  pointer-events: none;
  cursor: default;
}


/* Animações  */

@keyframes progress-bar {
  from {
    right: 100%;
  }
  to {
    right: 0;
  }
}

@keyframes refresh-scale {
  0% {
    transform: scale(1);
  }
  50% {
      transform: scale(0.9);
  }
  100% {
      transform: scale(1);
  }
}

